# pyletteyes

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/pyletteyes/: __init__.py  colour.py  palette.py
tests/: test_colour.py  test_palette.py
